# opencv

./: CMakeLists.txt  main.cpp
